# cortex

./: CMakeLists.txt  dependencies.sh
api/: CMakeLists.txt  dsr_agent_info_api.cpp  dsr_api.cpp  dsr_rt_api.cpp
api/include/dsr/api/: dsr_agent_info_api.h  dsr_api.h  dsr_eigen_defs.h  dsr_rt_api.h
core/: CMakeLists.txt
core/include/dsr/core/: id_generator.h
core/rtps/: dsrparticipant.cpp  dsrpublisher.cpp
core/types/: common_types.cpp
gui/: CMakeLists.txt
python-wrapper/: CMakeLists.txt  python_api.cpp
tests/: CMakeLists.txt  test.cpp  utils.h
tests/crdt/: crdt_operations.cpp
tests/graph/: attribute_operations.cpp  convenience_operations.cpp  edge_operations.cpp  graph_operations.cpp  node_operations.cpp
tests/synchronization/: graph_signals.cpp  graph_synchronization.cpp  type_translation.cpp
